Collapse app menu when screen width is less than 1240px Add JS to expand and collapse app menu Fix chat bubble size when bootsrap css is included in page

--- a/css/chat.css
+++ b/css/chat.css
@@ -426,6 +426,7 @@
     float: right;
     color: #5B5B5B;
     font-size: 12px;
+    line-height: 14px;
     position: relative;
     font-weight: normal;
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.28);
